# sarathi

./: .env.example  .gitignore  Makefile  PEDAGOGY.md  README.md  VISION_2.0.md  docker-compose.yml
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 162305e435a3_add_user_auth_fields.py  26a38178e52d_create_core_tables.py  8c6e0d6c9f3c_add_verse_topics_emotions.py  a1b2c3d4e5f6_add_long_term_memory_tables.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/lifespan/: __init__.py  events.py
apps/api/app/application/: __init__.py
apps/api/app/conversation/: __init__.py  conversation_engine.py  conversation_state.py  editorial_retriever.py  followup_selector.py  intelligence_loader.py  intent_classifier.py  journey_loader.py  journey_renderer.py  journey_selector.py  response_builder.py  safety_checker.py  session_store.py
apps/api/app/core/: __init__.py
apps/api/app/corpus/: __init__.py  builder.py  editorial_status.py  schema.py  taxonomies.py  validator.py
apps/api/app/domain/: __init__.py
apps/api/app/evaluation/: __init__.py  evaluation_report.py  metrics.py  response_evaluator.py
apps/api/app/extensions/: __init__.py
apps/api/app/importers/: __init__.py
apps/api/app/infrastructure/: __init__.py
apps/api/app/workers/: __init__.py
apps/api/tests/: __init__.py  conftest.py
apps/api/tests/conversation/: __init__.py  test_conversation_engine.py  test_journeys.py
apps/api/tests/evaluation/: __init__.py  test_evaluation.py
apps/api/tests/integration/: test_auth.py
apps/api/tests/unit/: test_answer_pipeline.py  test_corpus_validator.py  test_gita_supersite_importer.py  test_prompt_builder.py  test_retrieval_pipeline.py  test_spoken_text.py  test_version.py
(+322 files in other folders)
