[tool.poetry]
name = "sarathi-api"
version = "0.1.0"
description = "Sarathi AI — FastAPI backend grounded in the Bhagavad Gita"
authors = ["Sarathi AI Team"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = { extras = ["standard"], version = "^0.34.0" }
pydantic = "^2.10.4"
pydantic-settings = "^2.7.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.36" }
asyncpg = "^0.30.0"
alembic = "^1.14.0"
redis = { extras = ["hiredis"], version = "^5.2.1" }
httpx = "^0.28.1"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
structlog = "^24.4.0"
qdrant-client = "^1.18.0"
rank-bm25 = "^0.2.2"
email-validator = "^2.3.0"
python-multipart = "^0.0.32"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"
ruff = "^0.8.4"
mypy = "^1.14.0"
httpx = "^0.28.1"

[tool.poetry.group.voice.dependencies]
faster-whisper = "^1.2.1"
numpy = "^2.5.1"
soundfile = "^0.14.0"
piper-tts = "^1.5.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "ASYNC"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency injection uses Depends() in signatures via Annotated.
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
